--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.1.1-canary.0",
     "next-themes": "^0.4.4",
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
